--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  display: block; /* Remove flex */
 }
 a {
   font-weight: 500;
@@ -25,6 +24,14 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
 h1 {
@@ -49,13 +56,6 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-#root {
-  width: 100%;
-  margin: 0 auto;
-  padding: 1rem;
-  box-sizing: border-box;
 }
 
 @media (prefers-color-scheme: light) {
